--- a/Problema/css/main.scss
+++ b/Problema/css/main.scss
@@ -2,12 +2,14 @@
 
 body{
 	font-family: 'Roboto';
-	padding-top: 80px;
+	padding-top: 50px;
 }
 .navbar-default{
 	background:#27AD60;
 }
-
+.navbar-default .navbar-nav > li > a{
+	color:white;
+}
 .bg-kane {
 	background:url('../img/carousel-bg.jpg');
 	background-repeat: no-repeat;
